@@ -1,6 +1,7 @@
 Newest changes at the top
 Format: MM/DD/YYYY HH:MM - comment  
 
+04/12/2016 10:24 - Reverted Collections model to store data locally again
 04/11/2016 20:39 - Added transaction display to the homepage
 04/11/2016 15:33 - Added some error messages
 04/11/2016 14:05 - Base of the Registration is complete
